--- a/docker-compose.env
+++ b/docker-compose.env
@@ -8,6 +8,8 @@ WATCHMEN_WEB_PORT=3000
 WATCHMEN_ADMINS='admin-email@domain.com'
 WATCHMEN_GOOGLE_ANALYTICS_ID='your-GA-ID'
 
+WATCHMEN_WEB_NO_AUTH=true
+
 # Google OAuth configuration
 WATCHMEN_GOOGLE_CLIENT_ID=''
 WATCHMEN_GOOGLE_CLIENT_SECRET=''
@@ -21,3 +23,10 @@ NODE_ENV=production
 # Use redis service link, DNS entry
 WATCHMEN_REDIS_PORT_PRODUCTION=6379
 WATCHMEN_REDIS_ADDR_PRODUCTION=redis
+
+# slack configuration
+WATCHMEN_SLACK_NOTIFICATION_EVENTS='service-back latency-warning new-outage'
+WATCHMEN_SLACK_NOTIFICATION_URL='GET INCOMING WEBOOK URL FROM SLACK'
+WATCHMEN_SLACK_NOTIFICATION_CHANNEL='#notifications'
+WATCHMEN_SLACK_NOTIFICATION_USERNAME='Wise'
+WATCHMEN_SLACK_NOTIFICATION_ICON_EMOJI=':doge2:'
